kubernetes/apps/media/service-usenet.yaml
apiVersion: v1
kind: Service
metadata:
  name: usenet
  namespace: media
spec:
  selector:
    app.kubernetes.io/name: usenet
  ports:
    - name: nzbget
      port: 6789
      targetPort: 6789
    - name: radarr
      port: 7878
      targetPort: 7878
    - name: sonarr
      port: 8989
      targetPort: 8989
    - name: prowlarr
      port: 9696
      targetPort: 9696
